antlr-basics/src/main/java/com/poc/chapter_08_part01_csv_loader/CSVLoaderMap.g4
grammar CSVLoaderMap;

file : header row+;

header: row ;

row: field (',' field)* '\r'? '\n' ;

field : TEXT  # text
      | STRING # string
      | # empty
      ;
TEXT : ~[,\n\r"]+ ;
STRING : '"' ('""'|~'"')* '"' ;
